--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -61,6 +61,7 @@ $inverted-border: invert($panel-border)
 
 @import "header"
 @import "content"
+@import "popups"
 @import "panels" // inputs
 @import "buttons"
 @import "striped"
