--- a/themes/night.sass
+++ b/themes/night.sass
@@ -61,7 +61,7 @@ $inverted-border: lighten(invert($panel-border, 100%), 5%)
 
 @import "header"
 @import "content"
-@import "context"
+@import "popups"
 @import "panels" // inputs
 @import "buttons"
 @import "striped"
