Fix pmHeader styling.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -33,6 +33,7 @@ $s: $saturation
 .tab-item:active, 
 .tab-item.selected,
 #ts_tabs div.active,
+.pmGreyTop.new-message,
 button.tt-button.primary.small.inset,
 .options-menu .options .option:hover,
 .floating-menu .option:not(.split-option):not(.disabled):hover
