--- a/themes/_private.sass
+++ b/themes/_private.sass
@@ -7,8 +7,8 @@
 #buddyListMain
   box-shadow: none !important
 
-.pmGreyTop,
-.message-input-view
+.message-input-view,
+.pmGreyTop:not(.new-message)
   @extend %floating-panel
 
 .pmClose
