--- a/themes/_header.sass
+++ b/themes/_header.sass
@@ -8,13 +8,9 @@
 .tab-item
   box-shadow: none !important
 
-.tab-item.selected .tab-icon
-  filter: invert(1) !important
-
 .tab-item.selected .tab-title
   font-weight: bold !important
-  text-shadow: none !important
-  color: $color-bg !important
+  color: $color-tabs !important
   margin: -1px 0 0 -1px !important
 
 .tab-item:not(.selected):hover 
