--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -1,9 +1,9 @@
-$color-song: #ffffff
-$color-icon: #000000
-$color-main: #3e88ff
-$color-dark: #2361de
+$color-main: #3a88ff
+$color-dark: darken($color-main, 10%)
+$color-text: #ffffff
+
 $hue-rotate: 130deg
 $brightness: 0.8
 $saturation: 2
 
-@import 'style'
+@import "style"
