--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -1,7 +1,7 @@
-$color-song: #ffffff
-$color-icon: #000000
 $color-main: #e658eb
-$color-dark: #c031b7
+$color-dark: darken($color-main, 10%)
+$color-text: #ffffff
+
 $hue-rotate: 200deg
 $brightness: 0.8
 $saturation: 2
