--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -1,7 +1,7 @@
-$color-song: #ffffff
-$color-icon: #000000
 $color-main: #00a5bc
-$color-dark: #00799c
+$color-dark: darken($color-main, 10%)
+$color-text: #ffffff
+
 $hue-rotate: 90deg
 $brightness: 0.8
 $saturation: 2
