--- a/styles/green.sass
+++ b/styles/green.sass
@@ -1,7 +1,7 @@
-$color-song: #ffffff
-$color-icon: #000000
 $color-main: #46a100
-$color-dark: #107a00
+$color-dark: darken($color-main, 10%)
+$color-text: #ffffff
+
 $hue-rotate: 0deg
 $brightness: 0.8
 $saturation: 2
