--- a/styles/green.sass
+++ b/styles/green.sass
@@ -1,9 +1,8 @@
+$color-text: #ffffff
 $color-main: #46a100
 $color-dark: darken($color-main, 10%)
-$color-text: #ffffff
 
-$hue-rotate: 0deg
-$brightness: 0.8
-$saturation: 2
+$button: hue-rotate(0deg) brightness(0.8) saturate(2)
+$accent: hue-rotate(50deg) brightness(0.7) saturate(1)
 
 @import 'style'
