--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -1,9 +1,8 @@
-$color-main: #e658eb
-$color-dark: darken($color-main, 10%)
 $color-text: #ffffff
+$color-main: #d554da
+$color-dark: darken($color-main, 10%)
 
-$hue-rotate: 200deg
-$brightness: 0.8
-$saturation: 2
+$button: hue-rotate(200deg) brightness(0.8) saturate(2)
+$accent: hue-rotate(250deg) brightness(0.7) saturate(2)
 
 @import 'style'
