--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -1,9 +1,8 @@
+$color-text: #ffffff
 $color-main: #00a5bc
 $color-dark: darken($color-main, 10%)
-$color-text: #ffffff
 
-$hue-rotate: 90deg
-$brightness: 0.8
-$saturation: 2
+$button: hue-rotate(90deg) brightness(0.8) saturate(2)
+$accent: hue-rotate(140deg) brightness(0.7) saturate(1)
 
 @import 'style'
