--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -1,9 +1,8 @@
+$color-text: #ffffff
 $color-main: #3a88ff
 $color-dark: darken($color-main, 10%)
-$color-text: #ffffff
 
-$hue-rotate: 130deg
-$brightness: 0.8
-$saturation: 2
+$button: hue-rotate(130deg) brightness(0.8) saturate(2)
+$accent: hue-rotate(180deg) brightness(0.65) saturate(4)
 
 @import "style"
