Better tab styling.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -74,9 +74,10 @@
     margin-bottom: 5px
     div
       cursor: pointer
-      padding: 3px 5px
+      padding: 3px 10px
       font-size: 0.8em
       font-weight: bold
+      border-radius: 5px
       display: inline-block
       text-transform: uppercase
       &.active 
