--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -22,6 +22,9 @@
 #ts_panel > *
   cursor: pointer
 
+.chat .message.ts:not(:hover)
+  opacity: 0.5
+
 #ts_window.active,
 .header-bar:hover #ts_panel:not(.active)
   display: block
