--- a/themes/_chat.sass
+++ b/themes/_chat.sass
@@ -1,24 +1,29 @@
 .chat .message
-  .subject:hover,
-  .speaker:hover
-    color: $color-accent !important
-
-  &.action
-    background: rgba($color-action, 0.2) !important
-    border-right: 5px solid $color-action !important
+  &.stat
+    .subject:hover,
+    .speaker:hover
+      color: $color-text !important
+  &:not(.stat)
+    .subject:hover,
+    .speaker:hover
+      color: $color-accent !important
 
   &.mention
     background: rgba($color-onding, 0.2) !important
     border-right: 5px solid $color-onding !important
 
+  &.action
+    color: $color-action !important
+    border-right: 5px solid $color-action !important
+
   &.join
-    background: rgba($color-onjoin, 0.2) !important
+    color: $color-onjoin !important
     border-right: 5px solid $color-onjoin !important
 
   &.snag
-    background: rgba($color-onsnag, 0.2) !important
+    color: $color-onsnag !important
     border-right: 5px solid $color-onsnag !important
 
   &.left
-    background: rgba($color-onleft, 0.2) !important
+    color: $color-onleft !important
     border-right: 5px solid $color-onleft !important
