--- a/themes/_options.sass
+++ b/themes/_options.sass
@@ -8,6 +8,9 @@
 #ts_window option
   @extend %floating-panel
 
+#ts_tabs .active
+  background: $color-accent !important
+
 #ts_panel button
   color: $color-text
 
