--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -3,15 +3,16 @@ $color-bg:   #343434
 $color-text: #eaeaea
 $color-tabs: #ffffff
 
-$color-good: #37a737
-$color-bad:  #af1f1f
+$color-good: #7af178
+$color-bad:  #e65656
+$color-love: #f16e98
 
 // accent color
 $color-accent: #e1bb22
 
 // chat message colors
 $color-action: $color-bad // dj removal etc
-$color-onsnag: #a73775
+$color-onsnag: $color-love
 $color-onjoin: $color-good
 $color-onleft: $color-bad
 $color-onding: $color-accent
