--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -22,7 +22,7 @@
 #ts_panel > *
   cursor: pointer
 
-.chat .message.ts:not(:hover)
+.chat .message.stat:not(:hover)
   opacity: 0.5
 
 #ts_window.active,
