--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -1,6 +1,7 @@
 $color-text: #ffffff
 $color-main: #3a88ff
 $color-dark: darken($color-main, 10%)
+$color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(130deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(180deg) brightness(0.65) saturate(4)
