--- a/styles/green.sass
+++ b/styles/green.sass
@@ -1,6 +1,7 @@
 $color-text: #ffffff
 $color-main: #46a100
 $color-dark: darken($color-main, 7%)
+$color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(0deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(50deg) brightness(0.7) saturate(1)
