--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -1,6 +1,7 @@
 $color-text: #ffffff
 $color-main: #d554da
 $color-dark: darken($color-main, 10%)
+$color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(200deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(250deg) brightness(0.7) saturate(2)
