Ding menu styling tweaks.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -41,7 +41,8 @@ button.tt-button.primary.small.inset,
   background-image: linear-gradient(to bottom, $color-main, $color-dark) !important
   box-shadow: none !important
 
-.floating-menu .option.active
+.floating-menu .option.active,
+.floating-menu .option.selected,
   color: $color-text !important
   background: $color-dark !important
 
