--- a/themes/_popups.sass
+++ b/themes/_popups.sass
@@ -31,6 +31,7 @@
     &.active, 
     &.special
       background: $color-bg-alt !important
+    &.selected,
     &:not(.split-option):not(.disabled):hover
       color: $color-tabs !important
       background: $color-accent !important
