add styling to popup modals

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -68,3 +68,6 @@ button.tt-button.primary.small.inset,
 .score.scoregood
   color: $color-text !important
   background: $color-main !important
+
+.overlay .modal
+  background: $color-main !important
