--- a/themes/_popups.sass
+++ b/themes/_popups.sass
@@ -45,3 +45,10 @@
 
     .playlist-queue-plus
       background-position: 0 -92px !important
+
+.overlay .modal
+  background: $color-accent !important
+  .content-container
+    background: $color-bg !important
+    .content
+      color: $color-text !important
