--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -109,6 +109,8 @@
       vertical-align: top !important
       display: inline-block !important
       margin: -2px 10px 0 0 !important
+  .dropdown-volume-container
+    display: none !important
 
 #ts_volume
   top: 0
