Style settings menu.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -35,12 +35,14 @@
 .tab-item.selected,
 #ts_tabs div.active,
 .pmGreyTop.new-message,
+#settings .option:hover,
 button.tt-button.primary.small.inset,
 .options-menu .options .option:hover,
 .floating-menu .option:not(.split-option):not(.disabled):hover
   background-image: linear-gradient(to bottom, $color-main, $color-dark) !important
   box-shadow: none !important
 
+#settings .option.selected,
 .floating-menu .option.active,
 .floating-menu .option.selected,
   color: $color-text !important
@@ -60,6 +62,8 @@ button.tt-button.primary.small.inset,
   border-color: $color-main !important
 
 #buddyListTitle,
+#settings .option:hover a,
+#settings .option:hover .description,
 button.tt-button.primary.small.inset,
 .floating-menu .option.special:not(.disabled):hover 
   color: $color-text !important
