Add playlist song counter.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -29,6 +29,11 @@
 .header-bar:hover #ts_panel:not(.active)
   display: block
 
+#playlist-display em
+  right: 25px
+  margin-top: -1px
+  position: absolute
+
 #ts_panel
   button
     border: none
