Rewrite options panel...again.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -48,11 +48,11 @@ button.tt-button.primary.small.inset,
   color: $color-text !important
   background: $color-dark !important
 
-#ts_panel > h3, 
-#ts_window > h3, 
-#ts_window button,
+.ts_menu,
+#ts_hotbar input:after,
+#ts_window input:after,
 #ts_window .ts_credits a
-  color: $color-head
+  color: $color-head !important
 
 #ts_tabs div.active
   color: $color-text !important
