--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -1,108 +1,104 @@
-#ts_panel,
+#ts_hotbar,
 #ts_window
   display: none
   color: #eaeaea
-  padding: 0 15px
+  flex-wrap: wrap
+  line-height: 1em
   font-weight: bold
+  padding: 10px 20px
   background: #2f2f2f
+  align-items: center
 
-  > h3
+  h4
+    opacity: 0.5
+    margin-top: -10px
+    font-size: 0.85em
+    text-transform: uppercase
+
+  label,
+  .ts_menu
+    margin-right: 10px
+
+  .ts_menu
     color: gold
-    user-select: none
+    cursor: pointer
 
-  > *
-    margin: 0 5px
-    margin: 0 5px
-    display: inline-block
-
-  input[type="checkbox"]
-    margin: -2px 2px 0 0
-
-.ts_toggle,
-#ts_panel > *
-  cursor: pointer
-
-.chat .message.stat:not(:hover)
-  opacity: 0.5
+  .ts_credits
+    small
+      margin-right: 5px
+      &:not(:first-of-type):not(:hover)
+        opacity: 0.5
+    a
+      color: gold
+      text-decoration: none
+      text-transform: uppercase
 
 #ts_window.active,
-.header-bar:hover #ts_panel:not(.active)
-  display: block
+.header-bar:hover #ts_hotbar:not(.active)
+  display: flex
+
+.ts_toggle,
+#ts_tabs div,
+#ts_window select,
+#ts_window option
+  border: none
+  color: #ffffff
+  cursor: pointer
+  font-size: 0.8em
+  padding: 5px 10px
+  font-weight: bold
+  border-radius: 5px
+  background: #444444
+  text-transform: uppercase
+
+.ts_toggle
+  padding-left: 20px
+
+#ts_tabs div
+  margin: 0 -2px
+  cursor: pointer
+  display: inline-block
+  &.active
+    color: #2f2f2f
+    background: gold
+  &:not(:first-of-type)
+    border-top-left-radius: 0
+    border-bottom-left-radius: 0
+  &:not(:last-of-type)
+    border-top-right-radius: 0
+    border-bottom-right-radius: 0
+
+.ts_tab
+  flex: 0 0 100%
+  padding: 15px 0
+  line-height: 2em
+  &:not(.active)
+    display: none
+
+.ts_toggle 
+  span
+    opacity: 0.25
+    margin: 0 17px 0 7px
+  input
+    width: 0
+    &:after 
+      content: "•"
+      display: block
+      font-size: 3.2em
+      margin: -13px 0 0 -13px
+      color: rgba(#000000, 0.5)
+    &:checked:after
+      color: gold
+
+
+// turntable styling defaults
+.chat .message.stat:not(:hover)
+  opacity: 0.5
 
 #playlist-display em
   right: 25px
   margin-top: -1px
   position: absolute
-
-#ts_panel
-  button
-    border: none
-    color: #eaeaea
-    padding: 2px 5px
-    font-weight: bold
-    font-style: italic
-    background: transparent
-
-#ts_window
-  div
-    display: block
-    line-height: 1.75em
-    h5
-      text-transform: uppercase
-
-    h5, label
-      margin: 0 5px 
-      display: inline-block
-
-  small, h5
-    color: #676767
-
-  select
-    padding: 2px 4px
-    border-radius: 5px
-    border: 1px solid #676767
-
-  select, option
-    color: #eaeaea
-    background: #2f2f2f
-
-  button
-    color: gold
-    border: none
-    font-size: 0.8em
-    font-weight: bold
-    background: transparent
-    text-transform: uppercase
-
-  .opts_tab, .chat_tab, .ding_tab
-    &:not(.active)
-      display: none
-
-  #ts_tabs
-    margin-bottom: 5px
-    div
-      cursor: pointer
-      padding: 3px 10px
-      font-size: 0.8em
-      font-weight: bold
-      border-radius: 5px
-      display: inline-block
-      text-transform: uppercase
-      &.active 
-        color: #000000
-        background: gold
-
-
-  .ts_credits
-    padding: 5px 0 10px
-    > * 
-      margin-right: 5px
-    a
-      color: gold
-      text-decoration: none
-      text-transform: uppercase
-      &:not(:hover)
-        opacity: 0.5
 
 // restructure for volume
 .has-volume
