--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -1,5 +1,5 @@
 // core colors
-$color-bg:   #343434
+$color-bg:   #2f2f2f
 $color-text: #eaeaea
 $color-tabs: #ffffff
 
@@ -18,13 +18,13 @@ $color-onleft: $color-bad
 $color-onding: $color-accent
 
 // generated variables
-$color-bg-alt: lighten($color-bg, 3%)   // lighter background
-$color-border: lighten($color-bg, 9%)   // matching border color
+$color-bg-alt: lighten($color-bg, 1%)   // lighter background
+$color-border: darken($color-bg, 2%)   // matching border color
 $color-subtle: darken($color-text, 15%) // darker, subtle text
 
 // floating panel colors
-$color-panels: $color-border
-$panel-border: lighten($color-border, 9%)
+$color-panels: $color-bg
+$panel-border: $color-border
 
 // controls inverting elements
 // set invert to 0 to disable, 1 to enable
