--- a/themes/_panels.sass
+++ b/themes/_panels.sass
@@ -8,6 +8,8 @@
 .floating-panel-header
   border-top: 1px solid $panel-border !important
   border-bottom: 1px solid $panel-border !important
+  .divider
+    display: none
 
 .tabbed-panel .separator
   text-shadow: none !important
