--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -1,6 +1,6 @@
 // core colors
 $color-bg:   #2f2f2f
-$color-text: #eaeaea
+$color-text: #d8d8d8
 $color-tabs: #ffffff
 
 $color-good: #7af178
@@ -19,12 +19,12 @@ $color-onding: $color-accent
 
 // generated variables
 $color-bg-alt: lighten($color-bg, 1%)   // lighter background
-$color-border: darken($color-bg, 2%)   // matching border color
+$color-border: lighten($color-bg, 2%)   // matching border color
 $color-subtle: darken($color-text, 15%) // darker, subtle text
 
 // floating panel colors
-$color-panels: $color-bg
-$panel-border: $color-border
+$color-panels: lighten($color-border, 2%)
+$panel-border: lighten($color-panels, 2%)
 
 // controls inverting elements
 // set invert to 0 to disable, 1 to enable
@@ -52,12 +52,13 @@ $inverted-border: invert($panel-border)
   border: none !important
   box-shadow: none !important
   color: $color-text !important
-  background: $color-bg !important
+  background: transparent !important
 
 // the "bars" in the tabs
 %floating-panel
   box-shadow: none !important
-  background: $color-panels !important
+  color: $color-text !important
+  background: linear-gradient(to bottom, $color-panels, $panel-border) !important
 
 // end theme variables, import main styles
 
