--- a/themes/night.sass
+++ b/themes/night.sass
@@ -1,6 +1,6 @@
 // core colors
 $color-bg:   #141414
-$color-text: #cacaca
+$color-text: #b9b9b9
 $color-tabs: #ffffff
 
 $color-good: #40c340
@@ -18,13 +18,13 @@ $color-onleft: $color-bad
 $color-onding: $color-accent
 
 // generated variables
-$color-bg-alt: lighten($color-bg, 3%)   // lighter background
-$color-border: lighten($color-bg, 9%)   // matching border color
+$color-bg-alt: lighten($color-bg, 1%)   // lighter background
+$color-border: lighten($color-bg, 2%)   // matching border color
 $color-subtle: darken($color-text, 15%) // darker, subtle text
 
 // floating panel colors
-$color-panels: $color-border
-$panel-border: lighten($color-border, 9%)
+$color-panels: lighten($color-border, 2%)
+$panel-border: lighten($color-panels, 2%)
 
 // controls inverting elements
 // set invert to 0 to disable, 1 to enable
@@ -52,11 +52,12 @@ $inverted-border: lighten(invert($panel-border, 100%), 5%)
   border: none !important
   box-shadow: none !important
   color: $color-text !important
-  background: $color-bg !important
+  background: transparent !important
 
 // the "bars" in the tabs
 %floating-panel
   box-shadow: none !important
+  color: $color-text !important
   background: $color-panels !important
 
 // end theme variables, import main styles
