Options to hide audience and video player.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -178,3 +178,8 @@
   line-height: 1em
   text-align: left
   display: inline-block
+
+// hide the audience/video
+.ts_hide_videos .screen-content,
+.ts_hide_audience #room-view > canvas:nth-child(4)
+  display: none !important
