Style lighting as well.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -30,6 +30,9 @@
 #privateChatIcon.open .chatIcon
   filter: $accent
 
+#room-view > canvas:nth-child(2)
+  filter: $lights
+
 #buddyListHeader,
 .tab-item:active, 
 .tab-item.selected,
