--- a/styles/green.sass
+++ b/styles/green.sass
@@ -5,5 +5,6 @@ $color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(0deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(50deg) brightness(0.7) saturate(1)
+$lights: hue-rotate(100deg) brightness(0.7) saturate(1)
 
 @import 'style'
