--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -5,5 +5,6 @@ $color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(200deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(250deg) brightness(0.7) saturate(2)
+$lights: hue-rotate(300deg) brightness(0.7) saturate(2)
 
 @import 'style'
