--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -5,5 +5,6 @@ $color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(130deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(180deg) brightness(0.65) saturate(4)
+$lights: hue-rotate(230deg) brightness(0.65) saturate(4)
 
 @import "style"
