--- a/styles/purple.sass
+++ b/styles/purple.sass
@@ -5,5 +5,6 @@ $color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(160deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(195deg) brightness(0.7) saturate(2)
+$lights: hue-rotate(255deg) brightness(0.7) saturate(2)
 
 @import 'style'
