--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -5,5 +5,6 @@ $color-head: mix($color-text, $color-main, 30%)
 
 $button: hue-rotate(90deg) brightness(0.8) saturate(2)
 $accent: hue-rotate(140deg) brightness(0.7) saturate(1)
+$lights: hue-rotate(190deg) brightness(0.7) saturate(1)
 
 @import 'style'
