Grayscale DJ deck.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -33,6 +33,9 @@
 #room-view > canvas:nth-child(2)
   filter: $lights
 
+#room-view > canvas:nth-child(3)
+  filter: grayscale(1)
+
 #buddyListHeader,
 .tab-item:active, 
 .tab-item.selected,
