Fine tune positioning.

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -52,6 +52,9 @@
   background: #444444
   text-transform: uppercase
 
+#ts_window select
+  margin-bottom: 2px
+
 .ts_toggle
   padding-left: 20px
 
@@ -97,8 +100,9 @@
   opacity: 0.5
 
 #playlist-display em
+  top: 0
   right: 25px
-  margin-top: -1px
+  line-height: 27px
   position: absolute
 
 // restructure for volume
