Remove transparency from text inputs.

--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -52,13 +52,13 @@ $inverted-border: invert($panel-border)
   border: none !important
   box-shadow: none !important
   color: $color-text !important
-  background: transparent !important
+  background: $color-panels !important
 
 // the "bars" in the tabs
 %floating-panel
   box-shadow: none !important
   color: $color-text !important
-  background: linear-gradient(to bottom, $color-panels, $panel-border) !important
+  background: $color-panels !important
 
 // end theme variables, import main styles
 
