--- a/themes/night.sass
+++ b/themes/night.sass
@@ -52,7 +52,7 @@ $inverted-border: lighten(invert($panel-border, 100%), 5%)
   border: none !important
   box-shadow: none !important
   color: $color-text !important
-  background: transparent !important
+  background: $color-panels !important
 
 // the "bars" in the tabs
 %floating-panel
