Move theme base files to base folder.

--- a/themes/night.sass
+++ b/themes/night.sass
@@ -60,15 +60,4 @@ $inverted-border: lighten(invert($panel-border, 100%), 5%)
   color: $color-text !important
   background: $color-panels !important
 
-// end theme variables, import main styles
-
-@import "header"
-@import "content"
-@import "popups"
-@import "panels" // inputs
-@import "buttons"
-@import "striped"
-@import "songs"
-@import "chat"
-@import "private"
-@import "options"
+@import "base/theme"
