Restructure theme base.

--- a/themes/base/_chat.sass
+++ b/themes/base/_chat.sass
@@ -2,28 +2,28 @@
   &.stat
     .subject:hover,
     .speaker:hover
-      color: $color-text !important
+      color: $text !important
   &:not(.stat)
     .subject:hover,
     .speaker:hover
-      color: $color-accent !important
+      color: $accent !important
 
   &.mention
-    background: rgba($color-onding, 0.2) !important
-    border-right: 5px solid $color-onding !important
+    background: rgba($accent, 0.2) !important
+    border-right: 5px solid $accent !important
 
   &.action
-    color: $color-action !important
-    border-right: 5px solid $color-action !important
+    color: $action !important
+    border-right: 5px solid $action !important
 
   &.join
-    color: $color-onjoin !important
-    border-right: 5px solid $color-onjoin !important
+    color: $onjoin !important
+    border-right: 5px solid $onjoin !important
 
   &.snag
-    color: $color-onsnag !important
-    border-right: 5px solid $color-onsnag !important
+    color: $onsnag !important
+    border-right: 5px solid $onsnag !important
 
   &.left
-    color: $color-onleft !important
-    border-right: 5px solid $color-onleft !important
+    color: $onleft !important
+    border-right: 5px solid $onleft !important
