--- a/themes/base/_options.sass
+++ b/themes/base/_options.sass
@@ -4,21 +4,21 @@
   @extend %content-main
 
   input:not(:checked):after
-    color: $color-subtle
+    color: $subtle
 
 #ts_tabs div,
 #ts_hotbar label,
 #ts_window label,
 #ts_window select, 
 #ts_window option
-  color: $color-text 
-  background: lighten($color-border, 5%)
+  color: $text 
+  background: lighten($border, 5%)
 
 #ts_tabs .active
-  background: $color-accent !important
+  background: $accent !important
 
 #ts_window
   small, h5
-    color: $color-subtle
+    color: $subtle
   select
-    border-color: $panel-border !important
+    border-color: $border-p !important
