--- a/themes/base/_striped.sass
+++ b/themes/base/_striped.sass
@@ -10,7 +10,7 @@
 .song-list > ul  > :nth-child(odd):not(.separator),
 .message-history > :nth-child(odd):not(.separator),
 .conversations-list>ul>:nth-child(odd):not(.separator)
-  border-color: $color-border !important
+  border-color: $border !important
 
 .chat .message:nth-child(even),
 .guest-list      > :nth-child(even):not(.separator),
