--- a/themes/base/_header.sass
+++ b/themes/base/_header.sass
@@ -7,14 +7,18 @@
 
 .tab-item
   box-shadow: none !important
-
-.tab-item.selected .tab-title
-  font-weight: bold !important
-  color: $color-tabs !important
-  margin: -1px 0 0 -1px !important
-
-.tab-item:not(.selected):hover 
-  background: $color-bg-alt !important
-
-.tab-item:not(.selected):not(:hover) .tab-title
-  color: $color-subtle !important
+  .tab-title
+    text-shadow: none !important
+  &.selected
+    background: $active-tab-bg !important
+    .tab-icon
+      @include inverted
+    .tab-title
+      font-weight: bold !important
+      color: $active-tab-text !important
+      margin: -1px 0 0 -1px !important
+  &:not(.selected)
+    &:hover 
+      background: $bg-alt !important
+    &:not(:hover) .tab-title
+      color: $subtle !important
