--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -1,63 +1,27 @@
-// core colors
-$color-bg:   #2f2f2f
-$color-text: #d8d8d8
-$color-tabs: #ffffff
+$dark-theme: true
 
-$color-good: #7af178
-$color-bad:  #e65656
-$color-love: #f16e98
+$text:   #d8d8d8
+$subtle: darken($text, 15%)
 
-// accent color
-$color-accent: #e1bb22
+$bg-main: #2f2f2f
+$bg-alt:  lighten($bg-main, 1%)
+$border:  lighten($bg-main, 2%)
 
-// chat message colors
-$color-action: $color-bad // dj removal etc
-$color-onsnag: $color-love
-$color-onjoin: $color-good
-$color-onleft: $color-bad
-$color-onding: $color-accent
+$bg-panel: lighten($border, 2%)
+$border-p: lighten($border, 4%)
 
-// generated variables
-$color-bg-alt: lighten($color-bg, 1%)   // lighter background
-$color-border: lighten($color-bg, 2%)   // matching border color
-$color-subtle: darken($color-text, 15%) // darker, subtle text
+$bg-input:   $bg-panel
+$text-input: $text
 
-// floating panel colors
-$color-panels: lighten($color-border, 2%)
-$panel-border: lighten($color-panels, 2%)
+$accent: #e1bb22 // gold - mentions
+$action: #e65656 // red - dj removal, etc
+$onsnag: #f16e98 // pink
+$onjoin: #7af178 // green
+$onleft: $action // red
+$upvote: $onjoin // green
+$dnvote: $action // red
 
-// controls inverting elements
-// set invert to 0 to disable, 1 to enable
-// brighness to 1 to disable, 10 to enable
-// remove invert() to disable panels reset
-$invert-dark: 1 
-$brightness: 10
-$inverted-panels: invert($color-panels)
-$inverted-border: invert($panel-border)
-
-// define our main stylings
-%content-main
-  box-shadow: none !important
-  text-shadow: none !important
-  color: $color-text !important
-  background: $color-bg !important
-
-%content-alt
-  box-shadow: none !important
-  text-shadow: none !important
-  color: $color-text !important
-  background: $color-bg-alt !important
-
-%text-input
-  border: none !important
-  box-shadow: none !important
-  color: $color-text !important
-  background: $color-panels !important
-
-// the "bars" in the tabs
-%floating-panel
-  box-shadow: none !important
-  color: $color-text !important
-  background: $color-panels !important
+$active-tab-bg:   $accent // chat, queue, room
+$active-tab-text: $bg-main
 
 @import "base/theme"
