--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -1,10 +1,7 @@
-$color-text: #ffffff
-$color-main: #00a5bc
-$color-dark: darken($color-main, 7%)
-$color-head: mix($color-text, $color-main, 30%)
+$accent: #00a5bc
 
 $button: hue-rotate(90deg) brightness(0.8) saturate(2)
-$accent: hue-rotate(140deg) brightness(0.7) saturate(1)
 $lights: hue-rotate(190deg) brightness(0.7) saturate(1)
+$others: hue-rotate(140deg) brightness(0.7) saturate(1)
 
 @import 'style'
