--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -183,6 +183,25 @@
   text-align: left
   display: inline-block
 
+// replace the upload button
+#ts_upload
+  top: 2px
+  left: 6px
+  width: 21px
+  height: 21px
+  padding: 0px
+  opacity: 0.7
+  border: none
+  margin-top: 5px
+  cursor: pointer
+  position: relative
+  background-size: 38px
+  background-position: 0 -563px
+  background-image: url(https://s3.amazonaws.com/assets.turntable.fm/images/sprites/chrome-sprite@2x.png)
+
+#upload-button
+  display: none
+
 // hide the audience/video
 .ts_hide_videos .screen-content,
 .ts_hide_audience #room-view > canvas:nth-child(4)
