Fix link colors, pmClose color.

--- a/themes/base/_content.sass
+++ b/themes/base/_content.sass
@@ -5,8 +5,9 @@
 .room-info-intro
   @extend %content-main
 
-.tab-pane a
-  color: $text !important
+.tab-pane a,
+#pmWindows a,
+  color: $accent !important
   text-decoration: none !important
   border-bottom: 1px dotted !important
 
