--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -13,6 +13,8 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
   background: rgba($accent, 0.2) !important
 
 .ts_menu,
+.tab-pane a,
+#pmWindows a,
 #ts_window .ts_credits a,
 .current-song .details,
 .chat .message:not(.stat) .subject:hover,
