Tweak Cosmic & Midnight themes.

--- a/themes/cosmic.sass
+++ b/themes/cosmic.sass
@@ -1,9 +1,9 @@
 $dark-theme: true
 
-$text:   #d8d8d8
+$text:   #ede8ff
 $subtle: darken($text, 15%)
 
-$bg-main: #27162d
+$bg-main: #19132d
 $bg-alt:  lighten($bg-main, 1%)
 $border:  lighten($bg-main, 2%)
 
