--- a/themes/midnight.sass
+++ b/themes/midnight.sass
@@ -1,9 +1,9 @@
 $dark-theme: true
 
-$text:   #d8d8d8
+$text:   #e2eeff
 $subtle: darken($text, 15%)
 
-$bg-main: #16162d
+$bg-main: #091b35
 $bg-alt:  lighten($bg-main, 1%)
 $border:  lighten($bg-main, 2%)
 
