Increase contrast, tweak colors.

--- a/themes/base/_content.sass
+++ b/themes/base/_content.sass
@@ -47,7 +47,7 @@
 
 .become-dj, 
 .invite-dj
-  color: $active-tab-text !important
+  color: $bg-main !important
 
 ::-webkit-scrollbar
   width: 7px
