--- a/themes/cosmic.sass
+++ b/themes/cosmic.sass
@@ -22,6 +22,6 @@ $upvote: $onjoin // green
 $dnvote: $action // red
 
 $active-tab-bg:   $accent // chat, queue, room
-$active-tab-text: $bg-main
+$active-tab-text: #ffffff
 
 @import "base/theme"
