Tweak lighting color for styles.

--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -1,7 +1,7 @@
 $accent: #d554da
 
 $button: hue-rotate(200deg) brightness(0.8) saturate(2)
-$lights: hue-rotate(300deg) brightness(0.7) saturate(2)
 $others: hue-rotate(250deg) brightness(0.7) saturate(2)
+$lights: sepia(0.5) hue-rotate(250deg) saturate(3)
 
 @import 'style'
