--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -1,7 +1,7 @@
 $accent: #00a5bc
 
 $button: hue-rotate(90deg) brightness(0.8) saturate(2)
-$lights: hue-rotate(190deg) brightness(0.7) saturate(1)
 $others: hue-rotate(140deg) brightness(0.7) saturate(1)
+$lights: sepia(0.5) hue-rotate(160deg) saturate(4)
 
 @import 'style'
