--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -1,7 +1,7 @@
 $accent: #3a88ff
 
 $button: hue-rotate(130deg) brightness(0.8) saturate(2)
-$lights: hue-rotate(230deg) brightness(0.65) saturate(4)
 $others: hue-rotate(180deg) brightness(0.65) saturate(4)
+$lights: sepia(0.5) hue-rotate(180deg) saturate(4)
 
 @import "style"
