--- a/styles/green.sass
+++ b/styles/green.sass
@@ -1,7 +1,7 @@
 $accent: #46a100
 
 $button: hue-rotate(0deg) brightness(0.8) saturate(2)
-$lights: hue-rotate(100deg) brightness(0.7) saturate(1)
 $others: hue-rotate(50deg) brightness(0.7) saturate(1)
+$lights: sepia(0.5) hue-rotate(50deg) saturate(2)
 
 @import 'style'
