Apply color to more elements.

--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -3,5 +3,6 @@ $accent: #00a5bc
 $button: hue-rotate(90deg) brightness(0.8) saturate(2)
 $others: hue-rotate(140deg) brightness(0.7) saturate(1)
 $lights: sepia(0.5) hue-rotate(160deg) saturate(4)
+$grayed: sepia(1) hue-rotate(160deg) saturate(4)
 
 @import 'style'
