--- a/themes/cosmic.sass
+++ b/themes/cosmic.sass
@@ -25,3 +25,9 @@ $active-tab-bg:   $accent // chat, queue, room
 $active-tab-text: #ffffff
 
 @import "base/theme"
+
+#playlist .search .mag-glass,
+#playlist-display .down-arrow,
+.tab-item:not(.selected) .tab-icon,
+#playlist-display .playlist-queue-inset,
+  filter: contrast(0) sepia(1) hue-rotate(210deg) saturate(4) !important
