--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -17,6 +17,7 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 #pmWindows a,
 #ts_window .ts_credits a,
 .current-song .details,
+.tab-item:not(.selected):hover .tab-title,
 .chat .message:not(.stat) .subject:hover,
 .chat .message:not(.stat) .speaker:hover
   color: $accent-text !important
@@ -48,6 +49,9 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 .favorite-star.favorited, 
 #privateChatIcon.open .chatIcon
   filter: $others
+
+.tab-item:not(.selected):hover .tab-icon
+  filter: $grayed !important
 
 #buddyListHeader,
 .tab-item:active, 
