--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -3,5 +3,6 @@ $accent: #3a88ff
 $button: hue-rotate(130deg) brightness(0.8) saturate(2)
 $others: hue-rotate(180deg) brightness(0.65) saturate(4)
 $lights: sepia(0.5) hue-rotate(180deg) saturate(4)
+$grayed: sepia(1) hue-rotate(180deg) saturate(4)
 
 @import "style"
