--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -3,5 +3,6 @@ $accent: #d554da
 $button: hue-rotate(200deg) brightness(0.8) saturate(2)
 $others: hue-rotate(250deg) brightness(0.7) saturate(2)
 $lights: sepia(0.5) hue-rotate(250deg) saturate(3)
+$grayed: sepia(1) hue-rotate(250deg) saturate(4)
 
 @import 'style'
