--- a/styles/purple.sass
+++ b/styles/purple.sass
@@ -3,5 +3,6 @@ $accent: #9075ff
 $button: hue-rotate(160deg) brightness(0.8) saturate(2)
 $others: hue-rotate(195deg) brightness(0.7) saturate(2)
 $lights: sepia(0.5) hue-rotate(245deg) saturate(4)
+$grayed: sepia(1) hue-rotate(245deg) saturate(4)
 
 @import 'style'
