Make on indicators brighter.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -24,7 +24,7 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 
 #ts_hotbar input:checked:after,
 #ts_window input:checked:after
-  color: $accent !important
+  color: $accent-text !important
 
 .chat .message.mention
   border-right-color: $accent !important
@@ -51,7 +51,7 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
   filter: $others
 
 .tab-item:not(.selected):hover .tab-icon
-  filter: $grayed !important
+  filter: $grayed
 
 #buddyListHeader,
 .tab-item:active, 
