Increase brightness of option headers.

--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -15,6 +15,7 @@ $bg-gradient: linear-gradient(to bottom, $accent, darken($accent, 10%)) !default
 .ts_menu,
 .tab-pane a,
 #pmWindows a,
+#ts_window h4,
 #ts_window .ts_credits a,
 .current-song .details,
 .tab-item:not(.selected):hover .tab-title,
