Fix replaced button positioning.

--- a/themes/base/_buttons.sass
+++ b/themes/base/_buttons.sass
@@ -4,6 +4,7 @@
   background: transparent !important
 
 .chat-bar .chatsound
+  left: 6px !important
   width: 21px !important
   height: 21px !important
   padding: 0px !important
