style gears with cosmic/midnight

--- a/themes/cosmic.sass
+++ b/themes/cosmic.sass
@@ -26,6 +26,8 @@ $active-tab-text: #ffffff
 
 @import "base/theme"
 
+#ts_upload,
+.chat-bar .chatsound,
 #playlist .search .mag-glass,
 #playlist-display .down-arrow,
 .tab-item:not(.selected) .tab-icon,
