--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -1,8 +1,15 @@
+.header-bar
+  z-index: 1
+  font-size: 13px
+  line-height: 42px
+  
 #ts_hotbar,
 #ts_window
   display: none
   color: #eaeaea
+  margin: 0 auto
   flex-wrap: wrap
+  max-width: 960px
   line-height: 1em
   font-weight: bold
   padding: 10px 20px
