Add theme styling to lobby page.

--- a/themes/base/_content.sass
+++ b/themes/base/_content.sass
@@ -1,4 +1,6 @@
+body,
 #songs,
+#newsbox,
 .tab-pane,
 .song-list,
 .guest-list,
@@ -7,6 +9,7 @@
 
 .tab-pane a,
 #pmWindows a,
+#topBG #content a,
   color: $accent !important
   text-decoration: none !important
   border-bottom: 1px dotted !important
