--- a/themes/base/_popups.sass
+++ b/themes/base/_popups.sass
@@ -13,6 +13,8 @@
     .description
       color: $active-tab-text !important
 
+.settings-dropdown .dropdown
+  background: $bg-alt
 
 .options-menu
   .nib
